package fr.univ.bordeaux.application.ai.strategy.mcts;

public class MctsNode {
}
